GTK4-Konverter_Alpha/header/gtk/gtktextbuffer.pp


procedure gtk_text_buffer_undo(buffer:PGtkTextBuffer);cdecl;external;

procedure gtk_text_buffer_redo(buffer:PGtkTextBuffer);cdecl;external;

procedure gtk_text_buffer_begin_irreversible_action(buffer:PGtkTextBuffer);cdecl;external;

procedure gtk_text_buffer_end_irreversible_action(buffer:PGtkTextBuffer);cdecl;external;

procedure gtk_text_buffer_begin_user_action(buffer:PGtkTextBuffer);cdecl;external;

procedure gtk_text_buffer_end_user_action(buffer:PGtkTextBuffer);cdecl;external;

{$endif}

implementation

function GTK_TYPE_TEXT_BUFFER : longint; { return type might be wrong }
  begin
    GTK_TYPE_TEXT_BUFFER:=gtk_text_buffer_get_type;
  end;

function GTK_TEXT_BUFFER(obj : longint) : longint;
begin
  GTK_TEXT_BUFFER:=G_TYPE_CHECK_INSTANCE_CAST(obj,GTK_TYPE_TEXT_BUFFER,GtkTextBuffer);
end;

function GTK_TEXT_BUFFER_CLASS(klass : longint) : longint;
begin
  GTK_TEXT_BUFFER_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,GTK_TYPE_TEXT_BUFFER,GtkTextBufferClass);
end;

function GTK_IS_TEXT_BUFFER(obj : longint) : longint;
begin
  GTK_IS_TEXT_BUFFER:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GTK_TYPE_TEXT_BUFFER);
end;

function GTK_IS_TEXT_BUFFER_CLASS(klass : longint) : longint;
begin
  GTK_IS_TEXT_BUFFER_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,GTK_TYPE_TEXT_BUFFER);
end;

function GTK_TEXT_BUFFER_GET_CLASS(obj : longint) : longint;
begin
  GTK_TEXT_BUFFER_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,GTK_TYPE_TEXT_BUFFER,GtkTextBufferClass);
end;


end.
